# OptimFactory

./: .gitignore  README.md  pyproject.toml
example/: basic_usage.py  mnist.py
src/optimfactory/: __init__.py  initialization.py  param_group.py
